--- a/test.html
+++ b/test.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="http://robot.servicetest.lenovo/static/sdk/mini.css">
+    <link rel="stylesheet" href="./mini.css">
 </head>
 <body>
     <button onclick="init()">初始化</button>
     <button onclick="show()">显示</button>
     <button onclick="hide()">隐藏</button>
-    <script src="http://robot.servicetest.lenovo/static/sdk/mini.js">
+    <script src="./mini.js">
     </script>
     <script>
         let robot = null
